--- a/packages/sena/package.json
+++ b/packages/sena/package.json
@@ -43,13 +43,14 @@
     "fmt:check": "oxfmt --check"
   },
   "dependencies": {
-    "@clack/prompts": "^0.11.0",
+    "@clack/prompts": "^1.0.0-alpha.9",
     "commander": "^14.0.2",
     "picocolors": "^1.1.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
     "@typescript/native-preview": "^7.0.0-dev.20260116.1",
+    "bun-types": "^1.3.6",
     "oxfmt": "^0.24.0",
     "oxlint": "^1.39.0"
   }
