--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,19 +15,23 @@
   "dependencies": {
     "@base-ui/react": "^1.1.0",
     "@cloudflare/vite-plugin": "^1.13.8",
+    "@convex-dev/react-query": "^0.1.0",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@paper-design/shaders-react": "^0.0.70",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-pacer": "^0.19.3",
+    "@tanstack/react-query": "^5.90.19",
     "@tanstack/react-router": "^1.132.0",
     "@tanstack/react-router-devtools": "^1.132.0",
     "@tanstack/react-router-ssr-query": "^1.131.7",
+    "@tanstack/react-router-with-query": "^1.130.17",
     "@tanstack/react-start": "^1.132.0",
     "@tanstack/router-plugin": "^1.132.0",
     "@tanstack/zod-adapter": "^1.151.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.31.5",
     "jotai": "^2.16.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
