--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,10 @@
     "@base-ui/react": "^1.1.0",
     "@cloudflare/vite-plugin": "^1.13.8",
     "@convex-dev/react-query": "^0.1.0",
+    "@giscus/react": "^3.1.0",
     "@icons-pack/react-simple-icons": "^13.8.0",
     "@paper-design/shaders-react": "^0.0.70",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.7.0",
     "@tanstack/react-pacer": "^0.19.3",
@@ -37,6 +39,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
+    "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.0.6",
@@ -44,6 +47,9 @@
     "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@content-collections/core": "^0.13.1",
+    "@content-collections/mdx": "^0.2.2",
+    "@content-collections/vite": "^0.2.8",
     "@tanstack/devtools-vite": "^0.3.11",
     "@tanstack/eslint-config": "^0.3.0",
     "@testing-library/dom": "^10.4.0",
@@ -51,11 +57,11 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@typescript/native-preview": "catalog:",
     "@vitejs/plugin-react": "^5.0.4",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
     "tw-animate-css": "^1.4.0",
-    "@typescript/native-preview": "catalog:",
     "vite": "^7.1.7",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0",
